src/zenoh_dart.h

// ---------------------------------------------------------------------------
// Config
// ---------------------------------------------------------------------------

/// Returns the size of z_owned_config_t in bytes.
///
/// Used by Dart to allocate the correct amount of native memory
/// for opaque zenoh types.
FFI_PLUGIN_EXPORT size_t zd_config_sizeof(void);
/// Creates a default configuration.
///
/// @param config  Pointer to an uninitialized z_owned_config_t.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_config_default(z_owned_config_t* config);
/// Inserts a JSON5 value into the configuration at the given key path.
///
/// Takes a mutable owned config pointer. Internally obtains a mutable loan
/// via z_config_loan_mut() before calling zc_config_insert_json5().
///
/// @param config   Pointer to a valid z_owned_config_t.
/// @param key      Configuration key path (e.g., "mode").
/// @param value    JSON5 value string (e.g., "\"peer\"").
/// @param err_buf  Caller storage for this call's detail; NULL to decline.
/// @param err_cap  Capacity of err_buf in bytes.
/// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_config_insert_json5(
    z_owned_config_t* config, const char* key, const char* value,
    uint8_t* err_buf, int err_cap, int* err_len);
/// Creates a configuration from a JSON5 string.
///
/// Wraps zc_config_from_str(). Detail-carrying: on failure canon's own
/// explanation of THIS call is written into the caller's err_buf, so an
/// enriched ZenohException can surface it. See the err_buf/err_cap/err_len
/// contract above.
///
/// @param config   Pointer to an uninitialized z_owned_config_t.
/// @param s        JSON5 configuration string.
/// @param err_buf  Caller storage for this call's detail; NULL to decline.
/// @param err_cap  Capacity of err_buf in bytes.
/// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_config_from_str(
    z_owned_config_t* config, const char* s,
    uint8_t* err_buf, int err_cap, int* err_len);
/// Creates a configuration from a JSON5 file at the given path.
///
/// Wraps zc_config_from_file(). Detail-carrying: on failure canon's own
/// explanation of THIS call is written into the caller's err_buf, so an
/// enriched ZenohException can surface it. See the err_buf/err_cap/err_len
/// contract above.
///
/// @param config   Pointer to an uninitialized z_owned_config_t.
/// @param path     Path to a JSON5 configuration file.
/// @param err_buf  Caller storage for this call's detail; NULL to decline.
/// @param err_cap  Capacity of err_buf in bytes.
/// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_config_from_file(
    z_owned_config_t* config, const char* path,
    uint8_t* err_buf, int err_cap, int* err_len);
/// Creates a configuration from the ZENOH_CONFIG environment variable.
///
/// Wraps zc_config_from_env(). Detail-carrying: on failure canon's own
/// explanation of THIS call is written into the caller's err_buf, so an
/// enriched ZenohException can surface it. See the err_buf/err_cap/err_len
/// contract above.
///
/// @param config   Pointer to an uninitialized z_owned_config_t.
/// @param err_buf  Caller storage for this call's detail; NULL to decline.
/// @param err_cap  Capacity of err_buf in bytes.
/// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_config_from_env(
    z_owned_config_t* config,
    uint8_t* err_buf, int err_cap, int* err_len);
/// Reads the JSON value at the given configuration key.
///
/// Loans the config internally and wraps zc_config_get_from_str(), filling the
/// caller-allocated z_owned_string_t. Detail-carrying: on failure canon's own
/// explanation of THIS call is written into the caller's err_buf, so an
/// enriched ZenohException can surface it. See the err_buf/err_cap/err_len
/// contract above.
///
/// @param config   Pointer to a valid z_owned_config_t.
/// @param key      Configuration key path.
/// @param out      Pointer to an uninitialized z_owned_string_t to fill.
/// @param err_buf  Caller storage for this call's detail; NULL to decline.
/// @param err_cap  Capacity of err_buf in bytes.
/// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
/// @return 0 on success, negative on failure.
FFI_PLUGIN_EXPORT int zd_config_get(const z_owned_config_t* config,
                                    const char* key, z_owned_string_t* out,
                                    uint8_t* err_buf, int err_cap,
                                    int* err_len);
/// Drops (frees) the configuration.
///
/// After this call the owned config is in gravestone state.
/// A second drop is a safe no-op.
///
/// @param config  Pointer to a z_owned_config_t to drop.
FFI_PLUGIN_EXPORT void zd_config_drop(z_owned_config_t* config);
/// Gracefully closes and drops the session.
///
/// Calls z_close for graceful shutdown, then z_session_drop to release
/// resources. After this call the owned session is in gravestone state.
///
/// RETAINED alongside zd_open_session_async / zd_session_close_drop, which the
/// Dart API now uses. This pair operates on a CALLER-allocated slot and frees
/// nothing; the async pair owns its block end to end. Both remain exported: the
/// synchronous pair is the direct, allocation-free entry a non-Dart embedder
/// or a direct-bindings test needs, and removing it would delete the only
/// non-offloaded path to z_open.
///
/// @param session  Pointer to a z_owned_session_t to close and drop.
FFI_PLUGIN_EXPORT void zd_close_session(z_owned_session_t* session);
/// Opens a session WITHOUT blocking the caller.
///
/// z_open blocks for a caller-controlled duration -- measured 505 ms against a
/// configured-but-unreachable endpoint and 3005 ms for a client-mode failure at
/// the pinned 1.8.0. This entry hands that blocking call to a shim-owned
/// detached thread and returns immediately; the outcome arrives as ONE post on
/// @p dart_port.
///
/// THE RETURN MEANS "DID IT START", NOT "DID IT SUCCEED":
///
///   0                    the worker started; EXACTLY ONE post will arrive
///   12  ZD_OPEN_EALLOC   a heap allocation failed; nothing started
///   13  ZD_OPEN_ETHREAD  pthread_create failed; nothing started
///
/// Non-zero means NO post is coming, so the caller must fail rather than wait
/// on a completion that can never arrive. Canon's own outcome -- including
/// every canon failure -- travels in the post, never in this return.
///
/// The codes sit in canon-free POSITIVE space. Canon's positive returns are 1
/// (Z_CHANNEL_DISCONNECTED) and 2 (Z_CHANNEL_NODATA); this shim already uses
/// 10 and 11 elsewhere. 10 is UNREACHABLE here -- it is the capacity-argument
/// rejection and this entry takes no capacity argument. 11 is DELIBERATELY NOT
/// REUSED: reply_channel_alloc_harness.dart:18 opens a session under the malloc
/// injector and asserts code == 11 from zd_get_channel, so reusing it here
/// would let a green report come from the wrong site.
///
/// POST SHAPE -- one array of three:
///   [0] kInt64  canon's z_open result: 0 on success, negative on failure
///   [1] kInt64  the session block's address on success, 0 on failure
///   [2] length-carried bytes, or null -- canon's failure detail, captured on
///       the worker immediately after the failing call. Never kString: that
///       truncates at an interior NUL.
///
/// On success the address in [1] is a SHIM-OWNED block; release it with
/// zd_session_close_drop and never with a caller-side free.
///
/// @param config     Config to consume, or NULL for canon defaults. Its
///                   content is taken before this returns, on every path.
/// @param dart_port  Native port the single completion post is sent to.
FFI_PLUGIN_EXPORT int zd_open_session_async(z_owned_config_t* config,
                                            int64_t dart_port);
/// Closes, drops and FREES a session block that zd_open_session_async
/// allocated.
///
/// Takes uint8_t* rather than z_owned_session_t* deliberately, and the
/// asymmetry with zd_close_session above is the point: that one takes a typed
/// pointer because DART allocates the slot. This block is SHIM-owned -- its
/// address crosses to Dart as a plain kInt64 and returns as an opaque block
/// pointer, exactly the shape zd_query_drop(uint8_t* query) already uses in
/// this header.
///
/// Allocator-side frees: the shim malloc'd it, so the shim frees it.
///
/// @param session  Address delivered in element [1] of a successful post.
FFI_PLUGIN_EXPORT void zd_session_close_drop(uint8_t* session);
/// Writes all bytes from src into the writer.
FFI_PLUGIN_EXPORT int8_t zd_bytes_writer_write_all(
    z_loaned_bytes_writer_t* writer, const uint8_t* data, size_t len);