package/lib/src/bindings.dart


  late final _zd_bytes_writer_write_allPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int8 Function(
            ffi.Pointer<z_loaned_bytes_writer_t>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Size,
          )
        >
      >('zd_bytes_writer_write_all');
  late final _zd_bytes_writer_write_all = _zd_bytes_writer_write_allPtr
      .asFunction<
        int Function(
          ffi.Pointer<z_loaned_bytes_writer_t>,
          ffi.Pointer<ffi.Uint8>,
          int,
        )
      >();

  /// Gracefully closes and drops the session.
  ///
  /// Calls z_close for graceful shutdown, then z_session_drop to release
  /// resources. After this call the owned session is in gravestone state.
  ///
  /// RETAINED alongside zd_open_session_async / zd_session_close_drop, which the
  /// Dart API now uses. This pair operates on a CALLER-allocated slot and frees
  /// nothing; the async pair owns its block end to end. Both remain exported: the
  /// synchronous pair is the direct, allocation-free entry a non-Dart embedder
  /// or a direct-bindings test needs, and removing it would delete the only
  /// non-offloaded path to z_open.
  ///
  /// @param session  Pointer to a z_owned_session_t to close and drop.
  void zd_close_session(
    ffi.Pointer<ffi.Opaque> session,
  ) {
    return _zd_close_session(
      session,
    );
  }

  late final _zd_close_sessionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_close_session',
      );
  late final _zd_close_session = _zd_close_sessionPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Creates a default configuration.
  ///
  /// @param config  Pointer to an uninitialized z_owned_config_t.
  /// @return 0 on success, negative on failure.
  int zd_config_default(
    ffi.Pointer<ffi.Opaque> config,
  ) {
    return _zd_config_default(
      config,
    );
  }

  late final _zd_config_defaultPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_config_default',
      );
  late final _zd_config_default = _zd_config_defaultPtr
      .asFunction<int Function(ffi.Pointer<ffi.Opaque>)>();

  /// Drops (frees) the configuration.
  ///
  /// After this call the owned config is in gravestone state.
  /// A second drop is a safe no-op.
  ///
  /// @param config  Pointer to a z_owned_config_t to drop.
  void zd_config_drop(
    ffi.Pointer<ffi.Opaque> config,
  ) {
    return _zd_config_drop(
      config,
    );
  }

  late final _zd_config_dropPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Opaque>)>>(
        'zd_config_drop',
      );
  late final _zd_config_drop = _zd_config_dropPtr
      .asFunction<void Function(ffi.Pointer<ffi.Opaque>)>();

  /// Creates a configuration from the ZENOH_CONFIG environment variable.
  ///
  /// Wraps zc_config_from_env(). Detail-carrying: on failure canon's own
  /// explanation of THIS call is written into the caller's err_buf, so an
  /// enriched ZenohException can surface it. See the err_buf/err_cap/err_len
  /// contract above.
  ///
  /// @param config   Pointer to an uninitialized z_owned_config_t.
  /// @param err_buf  Caller storage for this call's detail; NULL to decline.
  /// @param err_cap  Capacity of err_buf in bytes.
  /// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
  /// @return 0 on success, negative on failure.
  int zd_config_from_env(
    ffi.Pointer<ffi.Opaque> config,
    ffi.Pointer<ffi.Uint8> err_buf,
    int err_cap,
    ffi.Pointer<ffi.Int> err_len,
  ) {
    return _zd_config_from_env(
      config,
      err_buf,
      err_cap,
      err_len,
    );
  }

  late final _zd_config_from_envPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('zd_config_from_env');
  late final _zd_config_from_env = _zd_config_from_envPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Creates a configuration from a JSON5 file at the given path.
  ///
  /// Wraps zc_config_from_file(). Detail-carrying: on failure canon's own
  /// explanation of THIS call is written into the caller's err_buf, so an
  /// enriched ZenohException can surface it. See the err_buf/err_cap/err_len
  /// contract above.
  ///
  /// @param config   Pointer to an uninitialized z_owned_config_t.
  /// @param path     Path to a JSON5 configuration file.
  /// @param err_buf  Caller storage for this call's detail; NULL to decline.
  /// @param err_cap  Capacity of err_buf in bytes.
  /// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
  /// @return 0 on success, negative on failure.
  int zd_config_from_file(
    ffi.Pointer<ffi.Opaque> config,
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Uint8> err_buf,
    int err_cap,
    ffi.Pointer<ffi.Int> err_len,
  ) {
    return _zd_config_from_file(
      config,
      path,
      err_buf,
      err_cap,
      err_len,
    );
  }

  late final _zd_config_from_filePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('zd_config_from_file');
  late final _zd_config_from_file = _zd_config_from_filePtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Creates a configuration from a JSON5 string.
  ///
  /// Wraps zc_config_from_str(). Detail-carrying: on failure canon's own
  /// explanation of THIS call is written into the caller's err_buf, so an
  /// enriched ZenohException can surface it. See the err_buf/err_cap/err_len
  /// contract above.
  ///
  /// @param config   Pointer to an uninitialized z_owned_config_t.
  /// @param s        JSON5 configuration string.
  /// @param err_buf  Caller storage for this call's detail; NULL to decline.
  /// @param err_cap  Capacity of err_buf in bytes.
  /// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
  /// @return 0 on success, negative on failure.
  int zd_config_from_str(
    ffi.Pointer<ffi.Opaque> config,
    ffi.Pointer<ffi.Char> s,
    ffi.Pointer<ffi.Uint8> err_buf,
    int err_cap,
    ffi.Pointer<ffi.Int> err_len,
  ) {
    return _zd_config_from_str(
      config,
      s,
      err_buf,
      err_cap,
      err_len,
    );
  }

  late final _zd_config_from_strPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('zd_config_from_str');
  late final _zd_config_from_str = _zd_config_from_strPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Reads the JSON value at the given configuration key.
  ///
  /// Loans the config internally and wraps zc_config_get_from_str(), filling the
  /// caller-allocated z_owned_string_t. Detail-carrying: on failure canon's own
  /// explanation of THIS call is written into the caller's err_buf, so an
  /// enriched ZenohException can surface it. See the err_buf/err_cap/err_len
  /// contract above.
  ///
  /// @param config   Pointer to a valid z_owned_config_t.
  /// @param key      Configuration key path.
  /// @param out      Pointer to an uninitialized z_owned_string_t to fill.
  /// @param err_buf  Caller storage for this call's detail; NULL to decline.
  /// @param err_cap  Capacity of err_buf in bytes.
  /// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
  /// @return 0 on success, negative on failure.
  int zd_config_get(
    ffi.Pointer<ffi.Opaque> config,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Opaque> out,
    ffi.Pointer<ffi.Uint8> err_buf,
    int err_cap,
    ffi.Pointer<ffi.Int> err_len,
  ) {
    return _zd_config_get(
      config,
      key,
      out,
      err_buf,
      err_cap,
      err_len,
    );
  }

  late final _zd_config_getPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('zd_config_get');
  late final _zd_config_get = _zd_config_getPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Inserts a JSON5 value into the configuration at the given key path.
  ///
  /// Takes a mutable owned config pointer. Internally obtains a mutable loan
  /// via z_config_loan_mut() before calling zc_config_insert_json5().
  ///
  /// @param config   Pointer to a valid z_owned_config_t.
  /// @param key      Configuration key path (e.g., "mode").
  /// @param value    JSON5 value string (e.g., "\"peer\"").
  /// @param err_buf  Caller storage for this call's detail; NULL to decline.
  /// @param err_cap  Capacity of err_buf in bytes.
  /// @param err_len  Out: bytes written to err_buf; always set, 0 when none.
  /// @return 0 on success, negative on failure.
  int zd_config_insert_json5(
    ffi.Pointer<ffi.Opaque> config,
    ffi.Pointer<ffi.Char> key,
    ffi.Pointer<ffi.Char> value,
    ffi.Pointer<ffi.Uint8> err_buf,
    int err_cap,
    ffi.Pointer<ffi.Int> err_len,
  ) {
    return _zd_config_insert_json5(
      config,
      key,
      value,
      err_buf,
      err_cap,
      err_len,
    );
  }

  late final _zd_config_insert_json5Ptr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Opaque>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Uint8>,
            ffi.Int,
            ffi.Pointer<ffi.Int>,
          )
        >
      >('zd_config_insert_json5');
  late final _zd_config_insert_json5 = _zd_config_insert_json5Ptr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Opaque>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint8>,
          int,
          ffi.Pointer<ffi.Int>,
        )
      >();

  /// Returns the size of z_owned_config_t in bytes.
  ///
  /// Used by Dart to allocate the correct amount of native memory
  /// for opaque zenoh types.
  int zd_config_sizeof() {
    return _zd_config_sizeof();
  }

  late final _zd_config_sizeofPtr =
      _lookup<ffi.NativeFunction<ffi.Size Function()>>('zd_config_sizeof');
  late final _zd_config_sizeof = _zd_config_sizeofPtr
      .asFunction<int Function()>();
